prusti-tests/tests/verify/ui/counterexamples/uint.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/uint.rs:5:11
  |
5 | #[ensures(result != 42)]
  |           ^^^^^^^^^^^^
  |
note: the error originates here
 --> $DIR/uint.rs:6:1
  |
6 | / fn foo(x: u32) -> u32 {
7 | |     let y = x + 1;
8 | |     y * 2
9 | | }
  | |_^
note: counterexample for "x"
        initial value: 20
        final value:   20
 --> $DIR/uint.rs:6:8
  |
6 | fn foo(x: u32) -> u32 {
  |        ^
note: counterexample for "y"
        final value:   21
 --> $DIR/uint.rs:7:9
  |
7 |     let y = x + 1;
  |         ^
note: counterexample for result
        final value:   42
 --> $DIR/uint.rs:6:19
  |
6 | fn foo(x: u32) -> u32 {
  |                   ^^^

error: aborting due to previous error

